--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,3 +1,12 @@
 <form>
-    <input type="text" placeholder="Enter Title">
+    <label>Title: </label>
+    <input id="titleText" type="text">
+
+    <label>Text: </label>
+    <input id="textText" type="text">
+
+    <input type="submit" value="Post">
+
 </form>
+
+<script src="/js/create.js"></script>
