front end can update comments to server

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,8 +2,14 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
 }
 
 .pink {
     color: pink
+}
+
+.post-article {
+    border: pink 2px solid;
+    border-radius: 5px;
 }
