--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,40 +1,29 @@
-<div class="row justify-space-between-md">
-  <div class="login-card">
-    <h2 class="page-title">Login</h2>
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
+    <h1>Login</h1>
+    <form id="loginForm">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+        <br>
+        <button id="submitLogIn" type="submit">Login</button>
     </form>
-  </div>
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
+
+        <h1>Sign Up</h1>
+    <form id="signupForm">
+        <label for="firstName">First Name:</label>
+        <input type="firstName" id="firstName" name="firstName" required>
+        <br>
+        <label for="lastName">Last Name:</label>
+        <input type="lastName" id="lastName" name="lastName" required>
+        <br>
+        <label for="emailSignUp">Email:</label>
+        <input type="email" id="emailSignUp" name="emailSignUp" required>
+        <br>
+        <label for="passwordSignUp">Password:</label>
+        <input type="password" id="passwordSignUp" name="passwordSignUp" required>
+        <br>
+        <button id="submitSignUp" type="submit">Login</button>
     </form>
-  </div>
-</div>
 
 <script src="/js/login.js"></script>
