comments page requires log in

--- a/views/launch.handlebars
+++ b/views/launch.handlebars
@@ -1,4 +1,7 @@
+{{#if loggedIn}}
 <a href="/create"><h2>Create Post</h2></a>
+{{/if}}
+
 <section>
   {{#each allPosts}}
     <article class="post-article" id="{{ this.id }}">
