--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,11 +9,14 @@
 <body>
     <header>
     {{#if loggedIn}}
-        <button id="logout" class="btn-no-style">Logout</button>
+        <button id="logout" class="btn-no-style" id="logout">Logout</button>
         {{else}}
         <a href="/login">Login</a>
         {{/if}}
     </header>
     {{{ body }}}
 </body>
+{{#if loggedIn}}
+<script src="/js/logout.js"></script>
+{{/if}}
 </html>
