updated user routes req.session

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
         {{else}}
         <a href="/login">Login</a>
         {{/if}}
+    <a href="/profile">Your Profile</a>
     </header>
     {{{ body }}}
 </body>
