--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" href="/css/login.css">
     <h1>Login</h1>
     <form id="loginForm">
         <label for="email">Email:</label>
