--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
     <header>
     {{#if loggedIn}}
     <a href="/create">Create Post</a>
-    <a href="/account">My Account</a>
+    <a href="/profile">My Account</a>
         {{else}}
         <a href="/login">Create Post</a>
         <a href="/login">Login</a>
