--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,1 +1,10 @@
+<link rel="stylesheet" href="/css/profile.css">
+<header>
+    {{#if loggedIn}}
+    <a href="/create">Create Post</a>
+    <a id="logout" href="/">Log Out</a>
+    {{/if}}
+    </header>
 <p> testing </p>
+
+<script src="/js/logout"></script>
