--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,10 +1,17 @@
 <link rel="stylesheet" href="/css/profile.css">
-<header>
-    {{#if loggedIn}}
+{{#if loggedIn}}
+<header class="showHeader">
     <a href="/create">Create Post</a>
     <a id="logout" href="/">Log Out</a>
-    {{/if}}
-    </header>
-<p> testing </p>
+</header>
 
+<p>Hello {{ user.first_name }}</p>
+
+
+
+
+{{ else }}
+
+<p>Please <a href="/login">log in</a> or <a href="/login">create an account</a></p>
+{{/if}}
 <script src="/js/logout"></script>
