--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,3 +1,26 @@
+body {
+    padding-left: 10px;
+    padding-right: 10px;
+}
 header {
     display: none;
+}
+
+.stacked {
+    display: flex;
+    flex-direction: column;
+}
+
+.space-below {
+    margin-bottom: 10px;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.right-align {
+    float: right;
 }
