--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,30 +1,38 @@
 <link rel="stylesheet" href="/css/login.css">
     <h1>Login</h1>
     <form id="loginForm">
+        <div class="stacked space-below">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
-        <br>
+        </div>
+        <div class="stacked space-below">
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
-        <br>
-        <button id="submitLogIn" type="submit">Login</button>
+        </div>
+        <button class="right-align" id="submitLogIn" type="submit">Login</button>
     </form>
 
         <h1>Sign Up</h1>
     <form id="signupForm">
-        <label for="firstName">First Name:</label>
-        <input type="firstName" id="firstName" name="firstName" required>
-        <br>
-        <label for="lastName">Last Name:</label>
-        <input type="lastName" id="lastName" name="lastName" required>
-        <br>
+        <div class="row">
+            <div class="stacked space-below">
+                <label for="firstName">First Name:</label>
+                <input type="firstName" id="firstName" name="firstName" required>
+            </div>  
+            <div class="stacked space-below">
+                <label for="lastName">Last Name:</label>
+                <input type="lastName" id="lastName" name="lastName" required>
+            </div>
+        </div>
+        <div class="stacked space-below">
         <label for="emailSignUp">Email:</label>
         <input type="email" id="emailSignUp" name="emailSignUp" required>
-        <br>
+        </div>
+        <div class="stacked space-below">
         <label for="passwordSignUp">Password:</label>
         <input type="password" id="passwordSignUp" name="passwordSignUp" required>
-        <br>
-        <button id="submitSignUp" type="submit">Login</button>
+        </div> 
+        <button id="submitSignUp" class="right-align" type="submit">Sign In</button>
     </form>
 
 <script src="/js/login.js"></script>
