debug deleting comments from profile

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -30,7 +30,7 @@
     <article class="post-article" id="{{ this.id }}">
         <div id="title-header">
             <h2 class="pink title">{{this.title}}</h2>
-            <p class="delete-btn">X</p>
+            <p class="delete-btn-comment">X</p>
         </div>
             <p>{{this.text}}</p>
     </article>
