--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,11 +9,17 @@
 <body>
     <header>
     {{#if loggedIn}}
-    <a href="/create">Create Post</a>
-    <a href="/profile">My Account</a>
+    <h2>Fitness Blog</h2>
+    <div class="row">
+        <a href="/create">Create Post</a>
+        <a href="/profile">My Account</a>
+    </div>
         {{else}}
-        <a href="/login">Create Post</a>
-        <a href="/login">Login</a>
+        <h2>Fitness Blog</h2>
+        <div class="row">
+            <a href="/login">Create Post</a>
+            <a href="/login">Login</a>
+        </div>
         {{/if}}
     </header>
     {{{ body }}}
