--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,3 +1,12 @@
+<link rel="stylesheet" href="/css/create.css">
+
+<header class="showHeader">
+<h2>Fitness Blog</h2>
+    <div class="row">
+    <a href="/create">Create Post</a>
+    <a id="logout" href="/profile">My Account</a>
+    </div>
+</header>
 
 <form>
     <label>Title: </label>
@@ -10,6 +19,6 @@
 
 </form>
 
-<a href="/"><h2>Main</h2></a>
+<a class="center" href="/"><p>Main</p></a>
 
 <script src="/js/create.js"></script>
