--- a/views/launch.handlebars
+++ b/views/launch.handlebars
@@ -3,7 +3,7 @@
   {{#each allPosts}}
     <article class="post-article" id="{{ this.id }}">
         <div id="title-header">
-            <h2 class="pink title">{{this.title}}</h2>
+            <h2 class="title">{{this.title}}</h2>
         </div>
             <p>{{this.text}}</p>
     </article>
