--- a/views/launch.handlebars
+++ b/views/launch.handlebars
@@ -1,7 +1,7 @@
 
 <section>
   {{#each allPosts}}
-    <article class="post-article" id="{{ this.id }}">
+    <article class="post-article text-green-700" id="{{ this.id }}">
         <div id="title-header">
             <h2 class="title">{{this.title}}</h2>
         </div>
