--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/styles.css">
     <title>Main Blog</title>
 </head>
@@ -15,7 +16,7 @@
         <a href="/profile">My Account</a>
     </div>
         {{else}}
-        <h2>Fitness Blog</h2>
+        <h2 class="text-green-600">Fitness Blog</h2>
         <div class="row">
             <a href="/login">Create Post</a>
             <a href="/login">Login</a>
