--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -10,10 +10,10 @@
 
 <form>
     <label>Title: </label>
-    <input id="titleText" type="text">
+    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="titleText" type="text">
 
     <label>Text: </label>
-    <input id="textText" type="text">
+    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="textText" type="text">
 
     <input type="submit" value="Post">
 
