--- a/views/launch.handlebars
+++ b/views/launch.handlebars
@@ -1,8 +1,8 @@
 
 <section>
   {{#each allPosts}}
-    <article class="post-article text-green-700" id="{{ this.id }}">
-        <div id="title-header">
+    <article class="post-article" id="{{ this.id }}">
+        <div class="font-bold" id="title-header">
             <h2 class="title">{{this.title}}</h2>
         </div>
             <p>{{this.text}}</p>
