--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/create.css">
 
 <header class="showHeader">
-<h2>Fitness Blog</h2>
+    <a class="bottom-0 center" href="/"><h2 class="text-4xl font-extrabold dark:text-white">Fitness Blog</h2></a>
     <div class="row">
     <a href="/create">Create Post</a>
     <a id="logout" href="/profile">My Account</a>
@@ -15,10 +15,9 @@
     <label>Text: </label>
     <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="textText" type="text">
 
-    <input type="submit" value="Post">
+    <input class="font-bold" type="submit" value="Post">
 
 </form>
 
-<a class="center" href="/"><p>Main</p></a>
 
 <script src="/js/create.js"></script>
