--- a/views/launch.handlebars
+++ b/views/launch.handlebars
@@ -2,7 +2,7 @@
 <section>
   {{#each allPosts}}
     <article class="post-article" id="{{ this.id }}">
-        <div class="font-bold" id="title-header">
+        <div class="text-4xl font-bold" id="title-header">
             <h2 class="title">{{this.title}}</h2>
         </div>
             <p>{{this.text}}</p>
