--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -2,16 +2,15 @@
 <section>
     <article class="post-article" id="{{ post.id }}">
         <div id="title-header">
-            <h2 class="pink title">{{post.title}}</h2>
+            <h2 class="text-4xl font-bold title">{{post.title}}</h2>
         </div>
             <p>{{post.text}}</p>
     </article>
     {{#if loggedIn}}
     <article>
         <h2>Share your thoughts</h2>
-        <form>
-    
-            <input id="commentText" placeholder="Add comment">
+        <form class="row">
+            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline stacked space-below" id="commentText" placeholder="Add comment">
             <input type="submit">
         </form>
     </article>
@@ -31,7 +30,5 @@
     </section>
 
 </section>
-
-<a class="center" href="/"><p>Home<p2></a>
 
 <script src="/js/singlePost.js"></script>
