resturcture profile page

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -15,7 +15,7 @@
   {{#each posts}}
     <article class="post-article" id="{{ this.id }}">
         <div id="title-header">
-            <h2 class="pink title">{{this.title}}</h2>
+            <h2 class="pink title text-xl">{{this.title}}</h2>
             <p class="delete-btn">X</p>
         </div>
             <p>{{this.text}}</p>
@@ -32,10 +32,9 @@
   {{#each comments}}
     <article class="post-article" id="{{ this.id }}">
         <div id="title-header">
-            <h2 class="pink title">{{this.title}}</h2>
+            <p>{{this.text}}</p>
             <p class="delete-btn-comment">X</p>
         </div>
-            <p>{{this.text}}</p>
     </article>
   {{/each}}
 </section>
