--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -13,7 +13,7 @@
     <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="titleText" type="text">
 
     <label>Text: </label>
-    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="textText" type="text">
+    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="textText" type="text"       aria-valuemax="maxiumum 300 characters">
 
     <input class="font-bold" type="submit" value="Post">
 
