--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -24,7 +24,7 @@
     <section>
         {{#each comments}}
         <div class="container">
-            <p class="comment">{{ this.text }}</p>
+            <p class="comment padding">{{ this.text }}</p>
         </div>
         {{/each}}
     </section>
